# search-api

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
static/assets/: ext.xpi
static/css/: fonts.css  icons.css  main.css
static/js/: WHY_IS_THIS_IN_HERE.txt  pse.js
templates/: about.html  image.html  index.html  reverse_image.html  search.html  search_engine.xml
