[tool.poetry]
name = "repl_nix_xrch"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
wikipedia = "^1.4.0"
bs4 = "^0.0.1"
Flask = "^2.2.2"
Flask-Cors = "^3.0.10"
autocorrect = "^2.6.1"
simpleeval = "^0.9.12"
Flask-Compress = "^1.13"

[tool.poetry.dev-dependencies]
python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.0"}
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
