[tool.poetry]
name = "repl_nix_pupa-api"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
simpleeval = "^0.9.12"
wikipedia = "^1.4.0"
autocorrect = "^2.6.1"
bs4 = "^0.0.1"
Flask = "^2.2.2"
Flask-Cors = "^3.0.10"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
